# sshuttled

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: daemon.h  dirs.h  fifo.h  log.h  pid.h
src/: daemonize.c  dirs.c  fifo.c  log.c  pid.c  sshuttlectl.c  sshuttled.c
systemd/: sshuttled.service
